c++: Allow empty-declaration in C++11 and later (PR 96068)

Since C++11 a semim-colon on its own at namespace scope is not invalid,
so do not give a pedantic diagnostic about it.

gcc/cp/ChangeLog:

	PR c++/96068
	* parser.c (cp_parser_toplevel_declaration): Only do pedwarn for
	empty-declaration in C++98.

gcc/testsuite/ChangeLog:

	* g++.old-deja/g++.bugs/900404_04.C: Add c++98_only selector to
	dg-error for extra ';'.
	* g++.old-deja/g++.law/missed-error2.C: Likewise.